--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@mage/preact",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "license": "MIT",
   "exports": {
     ".": "./render/mod.ts"
@@ -15,6 +15,7 @@
   },
   "imports": {
     "@mage/app": "jsr:@mage/app@^0.6.1",
+    "@preact/signals": "npm:@preact/signals@^2.0.1",
     "@std/assert": "jsr:@std/assert@^1.0.11",
     "@std/expect": "jsr:@std/expect@^1.0.13",
     "@std/fs": "jsr:@std/fs@^1.0.11",
